--- a/src/components/user/UserFollow.module.css
+++ b/src/components/user/UserFollow.module.css
@@ -1,27 +1,45 @@
-.imageHeading {
-  justify-content: center;
-}
-
-.userPostContainer {
+.userFollowContainer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 20px;
 }
 
-.userPostLink {
+.userFollowHeading {
+  text-align: center;
+  margin: 50px;
+}
+
+.userFollowContent {
+  display: contents;
+}
+
+.userFollowCard {
+  align-items: center;
+  padding-top: 20px;
+}
+
+.userFollowLink {
+  color: black;
   text-decoration: none;
 }
 
-.userPost img {
-  width: 100%;
+.userFollowLink:hover {
+  opacity: 0.6;
+  color: black;
+}
+
+.userFollowImg {
   border-radius: 50%;
+  height: 100px;
+  width: 100px;
 }
 
-.userPost p {
-  padding: 5px;
-  text-transform: capitalize;
+.userFollowBody {
+  display: grid;
+  align-items: end;
+  padding: 10px 10px 0px 10px;
 }
 
-.userPostContent {
-  padding: 0px;
+.userFollowTitle {
+  font-size: 100%;
 }
