created new avatar and banner page. Edit post functionality. Merged some js files. styles

--- a/src/components/explore/ListOfPosts.module.css
+++ b/src/components/explore/ListOfPosts.module.css
@@ -14,14 +14,7 @@
 }
 
 .listOfPostsLink:hover {
-  color: gray;
-}
-
-.listOfPostsImg {
-  width: 100%;
-}
-
-.listOfPostsImg:hover {
+  color: black;
   opacity: 0.6;
 }
 
