--- a/src/components/specificPost/Post.module.css
+++ b/src/components/specificPost/Post.module.css
@@ -1,8 +1,31 @@
-.specificPostContainer {
-  display: flex;
+.specificPostContent {
+  display: grid;
   gap: 20px;
+  justify-items: center;
 }
 
 .specificPostImage {
   width: 50%;
+}
+
+.specificCommentContainer {
+  display: grid;
+  gap: 20px;
+  margin: 20px auto;
+  border: solid thin #dee2e6;
+  border-radius: 0.375rem;
+  padding: 10px;
+  height: fit-content;
+}
+
+.specificCommentLink {
+  text-decoration: none;
+  color: black;
+}
+
+.specificCommentAvatar {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  /* on smaller screen, display none */
 }
