--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,11 @@
 
 #root {
   font-family: "Poppins", sans-serif;
-  margin: 0px auto;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+html {
+  height: 100%;
 }
