--- a/src/components/specificPost/Post.module.css
+++ b/src/components/specificPost/Post.module.css
@@ -5,7 +5,19 @@
 }
 
 .specificPostImage {
-  width: 50%;
+  width: 80%;
+}
+
+.specificReactionContainer {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.specificReactionContent {
+  border: solid thin #dee2e6;
+  border-radius: 50%;
+  padding: 10px;
 }
 
 .specificCommentContainer {
@@ -21,6 +33,7 @@
 .specificCommentLink {
   text-decoration: none;
   color: black;
+  font-weight: 500;
 }
 
 .specificCommentAvatar {
