--- a/src/components/landingpage/Login.module.css
+++ b/src/components/landingpage/Login.module.css
@@ -6,13 +6,13 @@
   border: solid thin white;
 }
 
-.button {
+.loginButton {
   background-color: white;
   color: black;
   border-color: white;
 }
 
-.button:hover {
+.loginButton:hover {
   background-color: transparent;
   border-color: white;
   color: white;
