--- a/src/components/specificPost/Post.module.css
+++ b/src/components/specificPost/Post.module.css
@@ -1,11 +1,33 @@
+.specificPostContainer,
+.form-select {
+  max-width: 1100px;
+  margin: 0px auto;
+}
+
 .specificPostContent {
   display: grid;
   gap: 20px;
-  justify-items: center;
+  margin: 20px auto 40px auto;
 }
 
 .specificPostImage {
-  width: 80%;
+  width: 100%;
+}
+
+.specificPostAuthor {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.specificPostAuthorLink {
+  color: black;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.specificPostBody {
+  max-width: 80%;
+  margin: 0px auto;
 }
 
 .specificReactionContainer {
@@ -39,6 +61,10 @@
 .specificCommentAvatar {
   width: 60px;
   height: 60px;
-  border-radius: 50%;
-  /* on smaller screen, display none */
+}
+
+@media (max-width: 767px) {
+  .specificCommentAvatar {
+    display: none;
+  }
 }
