--- a/src/components/specificProfile.js/ProfilePosts.module.css
+++ b/src/components/specificProfile.js/ProfilePosts.module.css
@@ -13,19 +13,6 @@
   display: contents;
 }
 
-.specificProfilePostsLink {
-  color: black;
-  text-decoration: none;
-}
-
-.specificProfilePostsLink:hover {
-  color: gray;
-}
-
-.specificProfilePostsImg {
-  width: 100%;
-}
-
 .specificProfilePostsImg:hover {
   opacity: 0.6;
 }
@@ -33,9 +20,20 @@
 .specificProfilePostsBody {
   display: grid;
   align-items: end;
-  padding: 10px 10px 0px 10px;
 }
 
 .specificProfilePostsTitle {
   font-size: 100%;
+}
+
+@media (max-width: 992px) {
+  .specificProfilePostsContainer {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (max-width: 575px) {
+  .specificProfilePostsContainer {
+    grid-template-columns: 1fr;
+  }
 }
