--- a/src/components/user/editProfile/EditBanner.module.css
+++ b/src/components/user/editProfile/EditBanner.module.css
@@ -1,3 +1,8 @@
+.editBannerContainer {
+  max-width: 1100px;
+  margin: 0px auto;
+}
+
 .editBannerForm {
   border: solid thin #dee2e6;
   border-radius: 0.375rem;
