--- a/src/components/specificProfile/ProfileFollow.module.css
+++ b/src/components/specificProfile/ProfileFollow.module.css
@@ -1,32 +1,14 @@
-.editBannerContainer {
-  max-width: 1100px;
-  margin: 0px auto;
-}
-
-.editBannerForm {
-  border: solid thin #dee2e6;
-  border-radius: 0.375rem;
-  padding: 10px;
-  margin-top: 20px;
-}
-
-.changeProfileButton {
+.profileFollowButton {
   background: linear-gradient(to left top, #d22f8c, #fc782e);
   border: solid white;
   color: white;
 }
 
-.changeProfileButton:hover {
+.profileFollowButton:hover {
   border: solid transparent;
   background: linear-gradient(to left top, #d22f8c, #fc782e),
     linear-gradient(to left top, #d22f8c, #fc782e);
   background-clip: padding-box, border-box;
   background-origin: padding-box, border-box;
   color: white;
-}
-
-@media (max-width: 575px) {
-  .editBannerImage {
-    height: 100px !important;
-  }
 }
