--- a/src/components/user/editProfile/EditAvatar.module.css
+++ b/src/components/user/editProfile/EditAvatar.module.css
@@ -11,6 +11,8 @@
 
 .editAvatarImage {
   width: 200px;
+  height: 200px;
+  border-radius: 50%;
   margin-bottom: 20px;
   display: grid;
   justify-self: center;
@@ -25,13 +27,13 @@
   align-self: center;
 }
 
-.changeProfileButton {
+.editAvatarButton {
   background: linear-gradient(to left top, #d22f8c, #fc782e);
   border: solid white;
   color: white;
 }
 
-.changeProfileButton:hover {
+.editAvatarButton:hover {
   border: solid transparent;
   background: linear-gradient(to left top, #d22f8c, #fc782e),
     linear-gradient(to left top, #d22f8c, #fc782e);
