--- a/src/components/specificPost/Post.module.css
+++ b/src/components/specificPost/Post.module.css
@@ -17,12 +17,13 @@
 .specificPostAuthor {
   display: flex;
   justify-content: flex-end;
+  gap: 5px;
 }
 
 .specificPostAuthorLink {
   color: black;
   text-decoration: none;
-  font-weight: 500;
+  font-weight: 700;
 }
 
 .specificPostAuthorLink:hover {
@@ -60,7 +61,7 @@
 .specificCommentLink {
   text-decoration: none;
   color: black;
-  font-weight: 500;
+  font-weight: 700;
 }
 
 .specificCommentLink:hover {
