--- a/src/components/user/UserInformation.module.css
+++ b/src/components/user/UserInformation.module.css
@@ -57,6 +57,10 @@
   .userInfoContent {
     text-align: center;
   }
+
+  .userInfoContent h1 {
+    text-align: center;
+  }
 }
 
 @media (max-width: 400px) {
